@@ -1,5 +1,6 @@
 ver 0.21.7 (not yet released)
 * require Meson 0.49.0 for native libgcrypt-config support
+* fix build failure with -Dlocal_socket=false
 
 ver 0.21.6 (2019/03/17)
 * protocol
